cargo-features = ["strip"]

[package]
name = "edge_speech"
version = "0.0.1"
authors = ["hellodword"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.30"
websocket = "0.24.0"
hyper = "^0.10.6"
tokio = "0.1.22"

[profile.release]
# https://github.com/johnthagen/min-sized-rust#optimize-for-size
opt-level = 'z'  # Optimize for size.
# https://github.com/johnthagen/min-sized-rust#strip-symbols-from-binary
strip = "symbols"
# https://github.com/johnthagen/min-sized-rust#enable-link-time-optimization-lto
lto = true # slow
codegen-units = 1
panic = 'abort'
debug = false